--- a/api.yml
+++ b/api.yml
@@ -134,7 +134,7 @@ paths:
             type: string
         - name: password
           in: query
-          description: Client Email Address
+          description: Client Password
           required: true
           schema:
             type: string
@@ -189,8 +189,7 @@ paths:
           description: ID of client to return
           required: true
           schema:
-            type: integer
-            format: int32
+            type: string
       responses:
         '200':
           description: Successful operation
@@ -308,8 +307,7 @@ paths:
           description: ID of account to return
           required: true
           schema:
-            type: integer
-            format: int32
+            type: string
       responses:
         '200':
           description: Successful operation
@@ -382,15 +380,15 @@ paths:
           schema:
             type: integer
             format: int32
-        - name: account_from
+        - name: account_id
           in: query
           description: Account number the money paid from
           required: true
           schema:
             type: string
-        - name: account_to
+        - name: recipient_account_id
           in: query
-          description: Recipient account number
+          description: Recipient account_id
           required: true
           schema:
             type: string
@@ -405,8 +403,10 @@ paths:
           description: Successful operation
         '400':
           description: Invalid input
-        '422':
-          description: Validation exception
+        '401':
+          description: Insufficient funds
+        '404':
+          description: account_id not Found
   /Transaction/History:
     get:
       tags:
@@ -420,8 +420,7 @@ paths:
           description: ID of account to return
           required: true
           schema:
-            type: integer
-            format: int32
+            type: string
       responses:
         '200':
           description: Successful operation
@@ -691,7 +690,7 @@ components:
           type: string
         description:
           type: string
-        account_id:
+        account_to:
           type: string
         recipient_account_number:
           type: string
@@ -701,6 +700,6 @@ components:
         amount: 100.00
         timestamp: "17-04-2022 16:21:12"
         description: "Deposit to Savings Account"
-        account_number: "NL12ABNA0123456789"
-        recipient_account_number: "NL12ABNA1234567890"
+        account_id: "NL12ABNA0123456789"
+        recipient_account_id: "NL12ABNA1234567890"
 
