--- a/api.yml
+++ b/api.yml
@@ -32,7 +32,7 @@ paths:
       parameters:
         - name: client_id
           in: query
-          description: Client Name
+          description: client_id
           required: true
           schema:
             type: string
