Added login app page added, dashboard app page added with logout

--- a/application/app.ini
+++ b/application/app.ini
@@ -1,3 +1,10 @@
 [server]
 ip=0.0.0.0
 port=81
+url=http://127.0.0.1:81
+
+[preferences]
+dark_theme=system
+# Modes: system, light, dark
+theme=dark-blue
+# Themes: blue, dark-blue, green
