Started dashboard implementation

--- a/application/app.ini
+++ b/application/app.ini
@@ -4,7 +4,7 @@ port=81
 url=http://127.0.0.1:81
 
 [preferences]
-dark_theme=system
-# Modes: system, light, dark
+dark_theme=dark
+# Modes: light, dark
 theme=dark-blue
 # Themes: blue, dark-blue, green
