--- a/api.yml
+++ b/api.yml
@@ -134,7 +134,7 @@ paths:
           description: OTP not valid
         '404':
           description: client_id not found
-  /Client/Client:
+  /Client:
     put:
       tags:
         - client
@@ -213,6 +213,31 @@ paths:
           description: Invalid Client ID supplied
         '404':
           description: Client not found
+  /Client/Accounts:
+    get:
+      tags:
+        - client
+      summary: Get all accounts for a client
+      description: Get all accounts for a client
+      operationId: manager.get_accounts
+      parameters:
+        - name: client_id
+          in: query
+          description: ID of client to return accounts for
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse'
+        '400':
+          description: Invalid input
+        '404':
+          description: No accounts found
   /Account:
     post:
       tags:
