Started account information page

--- a/application/app.ini
+++ b/application/app.ini
@@ -8,3 +8,7 @@ dark_theme=dark
 # Modes: light, dark
 theme=dark-blue
 # Themes: blue, dark-blue, green
+
+[client]
+default_id=31d90aad
+default_password=Happymeal1
