--- a/application/app.ini
+++ b/application/app.ini
@@ -1,14 +1,13 @@
 [server]
-ip=0.0.0.0
-port=81
-url=http://127.0.0.1:81
+ip = 0.0.0.0
+port = 81
+url = http://127.0.0.1:81
 
 [preferences]
-dark_theme=dark
-# Modes: light, dark
-theme=dark-blue
-# Themes: blue, dark-blue, green
+dark_theme = dark
+theme = dark-blue
 
 [client]
-default_id=31d90aad
-default_password=Happymeal1
+default_id = 31d90aad
+default_password = Happymeal1
+
