--- a/application/app.ini
+++ b/application/app.ini
@@ -8,6 +8,6 @@ dark_theme = dark
 theme = dark-blue
 
 [client]
-default_id = d18e5ae0
-default_password = KFCKrusher1
+default_id = 9ce7d233
+default_password = Happymeal1
 
