--- a/cli/cli.ini
+++ b/cli/cli.ini
@@ -4,5 +4,5 @@ port = 81
 url = http://127.0.0.1:81
 
 [client]
-default_id = 9ce7d233
-default_password = Happymeal1
+default_id =
+default_password =
