Start migration to postgresql and other minor fixes and improvements

--- a/server/template_bank.ini
+++ b/server/template_bank.ini
@@ -1,15 +1,16 @@
-[database]
-name=bank.db
-
-[api_file]
-name=api.yml
-
 [server]
+url=http://0.0.0.0:80/
+api_file=api.yml
 debug=False
 scheduler=True
 
-[api]
-url=http://0.0.0.0:81/
+[database]
+type=postgresql
+ip=0.0.0.0
+port=5432
+name=bank
+user=root
+password=
 
 [sessions]
 secret_key=
@@ -17,8 +18,8 @@ secret_key=
 [smtp]
 enabled=True
 host=
-port=
+port=465
 username=
 password=
 sender_name=Luxbank
-sender_email=
+sender_email=bank@domain.com
