--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_DB: banking_system
       POSTGRES_USER: dbadmin
-      POSTGRES_PASSWORD: your_db_password
+      POSTGRES_PASSWORD: Happymeal1
     volumes:
       - db_data:/var/lib/postgresql/data
     ports:
@@ -18,8 +18,6 @@ services:
     build: .
     container_name: banking_system_api
     restart: unless-stopped
-    environment:
-      DATABASE_URL: postgres://dbadmin:your_db_password@db/banking_system
     depends_on:
       - db
     ports:
