--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:latest
@@ -12,16 +10,25 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - 5432:5432
+    networks:
+      - bank
 
   api:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: banking_system_api
     restart: unless-stopped
     depends_on:
       - db
     ports:
-      - "8000:80"
+      - 8066:8066
+    networks:
+      - bank
 
 volumes:
   db_data:
+
+networks:
+  bank:
